--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,9 @@
   <body>
     {{content-for "body"}}
 
+    <script type="text/javascript">
+      window.L_PREFER_CANVAS = true;
+    </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/delivery.js"></script>
 
